-
Bug
-
Resolution: Done
-
P2: Important
-
5.14.0, 5.15.0 Beta2
-
None
-
windows7 x64, Windows 10 x64
-
-
b0234f390c170fd6604be6ca50a13a5597900662 (qt/qtwebengine/5.15)
Reproduce step:
1.Run app
2.Sleep OS and power is off
3.Awake, app crash
The following text is copyed from windbg (!analyze -v):
STACK_TEXT:
085bf55c 5c486b44 Qt5WebEngineCore!gl::GLFence::Create+0x2c
085bf56c 5ad9b56e Qt5WebEngineCore!gpu::InProcessCommandBuffer::GetTextureQtOnGpuThread+0x2e
085bf580 5ad9b5fc Qt5WebEngineCore!base::internal::Invoker<base::internal::BindState<void (__thiscall gpu::InProcessCommandBuffer::*)(unsigned int,base::OnceCallback<void __cdecl(unsigned int,std::unique_ptr<gl::GLFence,std::default_delete<gl::GLFence> >)>),base::WeakPtr<gpu::InProcessCommandBuffer>,unsigned int,base::OnceCallback<void __cdecl(unsigned int,std::unique_ptr<gl::GLFence,std::default_delete<gl::GLFence> >)> >,void __cdecl+0x4c
085bf59c 5cdadc21 Qt5WebEngineCore!gpu::InProcessCommandBuffer::RunTaskOnGpuThread+0x39
085bf5b0 5bb65a65 Qt5WebEngineCore!base::internal::FunctorTraits<void (_thiscall media::D3D11VideoDecoder::)(scoped_refptr<media::D3D11PictureBuffer>),void>::Invoke<void (_thiscall media::D3D11VideoDecoder::)+0x2d
085bf5c4 5bb65a8b Qt5WebEngineCore!base::internal::InvokeHelper<1,void>::MakeItSo<void (__thiscall media::D3D11VideoDecoder::*const &)+0x22
085bf5dc 5bb65f4c Qt5WebEngineCore!base::internal::Invoker<base::internal::BindState<void (__thiscall gpu::ImplementationBase::*)(base::OnceCallback<void __cdecl(void)>),base::WeakPtr<gpu::ImplementationBase>,base::OnceCallback<void __cdecl(void)> >,void __cdecl+0x17
085bf5f0 5cc3b46f Qt5WebEngineCore!gpu::Scheduler::RunNextTask+0x181
085bf668 5ae209ed Qt5WebEngineCore!base::internal::FunctorTraits<void (_thiscall base::internal::CancelableCallbackImpl<base::OnceCallback<void __cdecl(void)> >::)(void),void>::Invoke<void (_thiscall base::internal::CancelableCallbackImpl<base::OnceCallback<void __cdecl(void)> >::)(void),base::WeakPtr<base::internal::CancelableCallbackImpl<base::OnceCallback<void __cdecl+0x1c
085bf674 5ae20a33 Qt5WebEngineCore!base::internal::InvokeHelper<1,void>::MakeItSo<void (__thiscall base::internal::CancelableCallbackImpl<base::RepeatingCallback<void __cdecl(void)> >::*const &)(void),base::WeakPtr<base::internal::CancelableCallbackImpl<base::RepeatingCallback<void __cdecl+0x1c
085bf684 5ae213ae Qt5WebEngineCore!base::internal::Invoker<base::internal::BindState<void (__thiscall base::internal::CancelableCallbackImpl<base::RepeatingCallback<void __cdecl(void)> >::*)(void),base::WeakPtr<base::internal::CancelableCallbackImpl<base::RepeatingCallback<void __cdecl(void)> > > >,void __cdecl+0x13
085bf694 5c26e92a Qt5WebEngineCore!base::TaskAnnotator::RunTask+0x1ca
085bf728 5c2e5a45 Qt5WebEngineCore!base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl+0x315
085bf838 5c2e55c9 Qt5WebEngineCore!base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoSomeWork+0x39
085bf87c 5c2d1d40 Qt5WebEngineCore!base::MessagePumpDefault::Run+0x20
085bf8ac 5c2e5db4 Qt5WebEngineCore!base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::Run+0xa4
085bf8cc 5c28a821 Qt5WebEngineCore!base::RunLoop::RunWithTimeout+0x2b1
085bf928 5c28a52c Qt5WebEngineCore!base::RunLoop::Run+0xc
085bf934 5c28dcbb Qt5WebEngineCore!base::Thread::Run+0xb
085bf93c 5c28e24f Qt5WebEngineCore!base::Thread::ThreadMain+0x12f
085bf98c 5c26690d Qt5WebEngineCore!base::PlatformThread::Sleep+0x17d
085bf9ac 76a4343d kernel32+0x1343d
085bf9b8 772b9812 ntdll+0x39812
085bf9f8 772b97e5 ntdll+0x397e5
- relates to
-
QTBUG-71611 [Windows] Suspending (sleep) the OS while a WebEngine app is executed leads to asserts in debug mode and rendering issues (frozen) in release
-
- Open
-
-
QTBUG-79836 Qml WebEngineView: WebGL: CONTEXT_LOST_WEBGL upon returning from sleep
-
- Closed
-
| For Gerrit Dashboard: QTBUG-82656 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 296779,2 | Fix crash on fence create after failure to make context current | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |