Fix crash on fence create after failure to make context current

GLFence::Create requires valid current gl context, which is not the
case if InProcCommandBuffer::MakeCurrent fails: driver and api
structures will be null after context loss (for examples on os resume
with desktop gl), that triggers access violation.

Fixes: QTBUG-82656
Change-Id: If46a252147d1d3a0be7d2b19f7bbc36ac1dd338a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>